Fix menu not showing on firefox and ios

--- a/css/header-open.css
+++ b/css/header-open.css
@@ -183,7 +183,9 @@
         position: absolute;
         z-index: 2;
         top: 3rem;
+        right: 0;
         bottom: 0;
+        left: 0;
 
         overflow-y: scroll;
 
